--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ethosus-reiniciado",
+  "name": "ethosus-frontend",
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "vite": "^4.0.0",
